admission/admission.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: liz-admission
  name: liz-admission
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: liz-admission
      name: liz-admission
    spec:
      containers:
        - name: liz-admission
          image: lizrice/admission
          imagePullPolicy: IfNotPresent
          args:
            - "--tls-cert-file=/certs/cert.pem"
            - "--tls-private-key-file=/certs/key.pem"
          volumeMounts:
            - readOnly: true
              mountPath: /certs
              name: admission-server
      volumes:
        - name: admission-server
          secret:
            secretName: liz-admission-certs
            optional: false
---
kind: Service
apiVersion: v1
metadata:
  name: liz-admission
spec:
  selector:
    app: liz-admission
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: liz-admission-webhook
webhooks:
- name: liz-admission.default.svc
  rules:
  - apiGroups:
    - "*"
    apiVersions:
    - "*"
    operations:
    - CREATE
    resources:
    - serviceaccounts
  clientConfig:
    service:
      namespace: default
      name: liz-admission
      path: "/admission"
    # Get caBundle from the CA info in the cluster-info configmap (kube-public namespace)
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNE1USXdOekU1TXpBMU5sb1hEVEk0TVRJd05ERTVNekExTmxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTWhkCjlBSTJCSjh2NFpwbVpXdVQ0dlBpdnIwcTV5YzEvcjhXQlNoYWhIZ2wrU2Q3T2R1RU80dzQ4RUViMUhGeXVYZUMKNFo4a2tFN1l4a2p2KzFTTlNpMVkraTNnVUNldlBDZElaUUZaWm03cUJlS3V5Y3NHN3N0TU11R2tzaEVDZmNOWAplOEx2R0J6OEJpV0 [...]
